# AG-SpTRSV

./: .clang-format  CMakeLists.txt
include/: GPU_setup.h  YYSpTRSV.h  common.h  search.h  spts_syncfree_cuda.h
matrix/: info  transfer
test/: Makefile  main_ag.cu  main_search.cu  matsolve-agsptrsv-search.cu  matsolve-agsptrsv.cu  matsolve-config-a100.json  matsolve-config.json  matsolve-csrgen.json  run-matsolve.py  test_ag  test_ag_search
test/results/: matsolve-agsptrsv-3090bandwidth.json  matsolve-agsptrsv-best-stencilbox-stencilwidth1.out  matsolve-agsptrsv-best-stencilstar-stencilwidth1.out  matsolve-agsptrsv-best-stencilstar-stencilwidth2.out  matsolve-agsptrsv-best-stencilstarfill1-stencilwidth1.out  matsolve-agsptrsv-search-stencilbox-stencilwidth1-dof3.out  matsolve-agsptrsv-search-stencilbox-stencilwidth1-dof4.out  matsolve-agsptrsv-search-stencilbox-stencilwidth1-dof5.out  matsolve-agsptrsv-search-stencilbox-stencilwidth1-dof6.out  matsolve-agsptrsv-search-stencilbox-stencilwidth1-dof7.out  matsolve-agsptrsv-search-stencilbox-stencilwidth1-dof8.out  matsolve-agsptrsv-search-stencilbox-stencilwidth1.out  matsolve-agsptrsv-search-stencilstar-stencilwidth1-dof5.out  matsolve-agsptrsv-search-stencilstar-stencilwidth1-dof6.out  matsolve-agsptrsv-search-stencilstar-stencilwidth1-dof7.out  matsolve-agsptrsv-search-stencilstar-stencilwidth1-dof8.out  matsolve-agsptrsv-search-stencilstar-stencilwidth1.out.bak  matsolve-agsptrsv-search-stencilstar-stencilwidth2.out  matsolve-agsptrsv-search-stencilstarfill1-stencilwidth1-dof4.out  (+31 more)
utils/: utils.cpp
